# GraphNet

./: .pre-commit-config.yaml  CONTRIBUTE_TUTORIAL.md  CONTRIBUTE_TUTORIAL_cn.md  LICENSE  README.md  README_cn.md  plot_unstable_to_stable.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: BladeDISC_batch_test.txt  BladeDISC_tech_report.md  BlaseDISC_validation_report.txt  CONTRIBUTE_TUTORIAL.md  CONTRIBUTE_TUTORIAL_cn.md  README_contribute.md  README_contribute_cn.md  hardware_test.md  hardware_test_cn.md  torch_to_paddle_conversion_design.md
graph_net/: S_analysis.py  __init__.py  analysis.py  analysis_util.py  apply_sample_pass.py  auto_fault_locator.py  benchmark_demo.sh  benchmark_result.py  config.py  constraint_util.py  declare_config_mixin.py  default_positive_tolerance_interpretation.py  dimension_generalizer.py  dynamic_dim_constraints.py  filter_fault_model_path.py  graph_net_json_file_util.py  graph_net_root.py  hash_util.py  imp_util.py  local_graph_decomposer_wrapper.py  log2json.py  mismatch_extended_positive_tolerance_interpretation.py  model_path_handler.py  model_path_util.py  optional.py  pack.py  path_utils.py  plot_ESt.py  plot_St.py  plot_violin.py  positive_tolerance_interpretation.py  positive_tolerance_interpretation_manager.py  samples_statistics.py  status.py  subgraph_decompose_and_evaluation_step.py  subgraph_range_util.py  tensor_meta.py  test_compiler_util.py  unpack.py  verify_aggregated_params.py  (+1 more)
graph_net_bench/: aggregate_es_scores.py  analysis_util.py  calculate_es_scores.py  path_utils.py  (+6 more)
(+15772 files in other folders)
