[build-system]
requires = ["hatchling>=1.18", "editables>=0.5"]
build-backend = "hatchling.build"

[project]
name = "graph-net"
version = "0.1.0"
description = "Graph neural network utilities and models."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "GraphNet Authors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.0",
  "astor>=0.8",
]
agent = [
  "huggingface_hub>=0.20.0",
  "transformers>=4.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["graph_net"]

[tool.hatch.build.targets.sdist]
include = [
  "graph_net",
  "README.md",
  "LICENSE",
]


